classDiagram
    %% Class Diagram for Domain Entities
    %% Models core business objects, their properties, methods, and relationships
    
    class ImageAnalysisRequest {
        +string ImageData
        +string ContentType
        +string FileName
        +int DescriptionLength
        +validate() bool
    }
    
    class ImageAnalysisResult {
        +string Description
        +List~string~ Tags
        +double ConfidenceScore
        +string RegeneratedImageData
        +string RegeneratedImageContentType
        +ProcessingMetrics Metrics
        +isValid() bool
        +hasRegeneratedImage() bool
    }
    
    class ProcessingMetrics {
        +long ImageAnalysisTimeMs
        +long DescriptionGenerationTimeMs
        +long ImageRegenerationTimeMs
        +int DescriptionTokensUsed
        +int RegenerationTokensUsed
        +string ErrorInfo
        +long TotalProcessingTimeMs
        +hasErrors() bool
        +getPerformanceSummary() string
    }
    
    class ComputerVisionService {
        -HttpClient httpClient
        -ILogger logger
        -string endpoint
        -string apiKey
        +analyzeImageAsync(byte[] imageData) Task~VisionAnalysis~
        +extractTagsAsync(VisionAnalysis analysis) Task~List~string~~
        +calculateConfidence(VisionAnalysis analysis) double
        -validateImageData(byte[] data) bool
        -handleApiError(Exception ex) void
    }
    
    class OpenAIService {
        -OpenAIClient client
        -ILogger logger
        -string deploymentName
        +enhanceDescriptionAsync(string description, List~string~ tags) Task~string~
        +generateImageAsync(string description) Task~byte[]~
        +estimateTokenUsage(string text) int
        -buildPrompt(string description, List~string~ tags) string
        -validateResponse(string response) bool
    }
    
    class ImageAnalysisController {
        -ILogger logger
        -IComputerVisionService visionService
        -IOpenAIService openAIService
        +analyzeImage(ImageAnalysisRequest request) Task~ImageAnalysisResult~
        +getHealth() IActionResult
        -validateRequest(ImageAnalysisRequest request) bool
        -createMetrics() ProcessingMetrics
        -handleException(Exception ex) IActionResult
    }
    
    class ApiService {
        -HttpClient httpClient
        -ILogger logger
        -string baseUrl
        +analyzeImageAsync(ImageAnalysisRequest request) Task~ImageAnalysisResult~
        +checkHealthAsync() Task~bool~
        -handleHttpError(HttpResponseMessage response) void
        -serializeRequest(ImageAnalysisRequest request) string
    }
    
    %% Relationships
    ImageAnalysisResult *-- ProcessingMetrics : contains
    ImageAnalysisController --> ImageAnalysisRequest : receives
    ImageAnalysisController --> ImageAnalysisResult : returns
    ImageAnalysisController --> ComputerVisionService : uses
    ImageAnalysisController --> OpenAIService : uses
    ComputerVisionService --> ProcessingMetrics : updates
    OpenAIService --> ProcessingMetrics : updates
    ApiService --> ImageAnalysisRequest : sends
    ApiService --> ImageAnalysisResult : receives
    
    %% Annotations
    note for ImageAnalysisRequest "Validation attributes ensure data integrity"
    note for ProcessingMetrics "Tracks performance and errors for telemetry"
    note for ComputerVisionService "Handles Azure Computer Vision API integration"
    note for OpenAIService "Manages Azure OpenAI interactions"
